<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.myappcompany.isaac.dealday.SearchFragment">

    <LinearLayout
        android:id="@+id/SearchLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/textSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/imageButtonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingBottom="0dp"
            android:backgroundTint="@android:color/white"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/null_search"
        android:textSize="18pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEmptySearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/not_found_search"
        android:textSize="18pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@+id/SearchLinearLayout">

        </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>
